# vaultor

./: .gitignore  Makefile  README.md  install.sh  uninstall.sh
.github/workflows/: ci.yml  pr_ci_check.yml  release.yml
apps/vaultor/: index.html  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
apps/vaultor/src/: App.svelte  app.css
apps/vaultor/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/vaultor/src-tauri/capabilities/: default.json
apps/vaultor/src-tauri/icons/: icon.icns
apps/vaultor/src-tauri/migrations/: 001_initial.sql  002_kv_fields_updated_at.sql
apps/vaultor/src-tauri/src/: error.rs  lib.rs  main.rs  touchid.m
apps/vaultor/src-tauri/src/commands/: auth.rs  files.rs  generate.rs  git_storage.rs  mod.rs  namespaces.rs  secrets.rs  settings.rs
apps/vaultor/src-tauri/src/features/: mod.rs
apps/vaultor/src-tauri/src/features/auth/: mod.rs  session.rs  touchid.rs
apps/vaultor/src-tauri/src/features/git_storage/: merge.rs  mod.rs  subprocess.rs  sync.rs
apps/vaultor/src-tauri/src/features/keychain/: mod.rs
apps/vaultor/src-tauri/src/features/settings/: config.rs
apps/vaultor/src-tauri/src/features/storage/: db.rs  file_secrets.rs  kv_fields.rs  mod.rs  namespace.rs  secret.rs
apps/vaultor/src-tauri/src/features/vault/: cipher.rs
apps/vaultor/src-tauri/tests/: git_sync_integration.rs  security_tests.rs
apps/vaultor/src/lib/: api.ts
apps/vaultor/src/lib/components/layout/: AppShell.svelte  (+4 more)
apps/vaultor/src/lib/stores/: namespace.ts  secrets.ts  session.ts
docs/: architecture.md  vaultor.md
(+9 files in other folders)
