[package]
name = "vaultor"
version = "0.1.1"
description = "Vaultor — secure local password manager"
authors = []
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "vaultor_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
cc = "1"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
security-framework = "2"
tokio = { version = "1", features = ["full"] }
getrandom = "0.2"
rand = "0.8"
secrecy = { version = "0.8", features = ["bytes"] }
zeroize = "1"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros"] }
uuid = { version = "1", features = ["v4"] }
aes-gcm = "0.10"
base64 = "0.22"
tauri-plugin-dialog = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

[dev-dependencies]
tempfile = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
